# mdxx

./: .gitattributes  .gitignore  .gitmodules  README.md  header
css/: article.css  aside.css  code-block.css  general.css  terminal.css
css/code-style/: abap.css  algol.css  algol_nu.css  arduino.css  autumn.css  borland.css  bw.css  colorful.css  default.css  emacs.css  friendly.css  fruity.css  igor.css  lovelace.css  manni.css  monokai.css  murphy.css  native.css  paraiso-dark.css  paraiso-light.css  pastie.css  perldoc.css  rainbow_dash.css  rrt.css  sas.css  solarized-dark.css  solarized-light.css  stata-dark.css  stata.css  tango.css  trac+dark.css  trac.css  vim.css  vs.css  xcode.css
js/: highlight-internal-link.js  sidenav.js
markdown-compiler/: .gitignore  aside_plugin.py  generate_syntax_highlighting_css.py  how-to-write-a-linux-command.tumd  html_context.py  html_default.py  html_lists.py  html_manager.py  html_paragraph.py  markdown.py  non_article_manager.py  terminal_plugin.py
markdown-compiler/html/: default.py  manager.py  tumd_comment.py
markdown-compiler/plugins/: code-block.py  terminal.py
markdown-compiler/tests/: context_test.py  how-to-write-a-linux-command.tumd
markdown-compiler/util/: check_valid_context.py
md++/: .gitignore  .ycm_extra_conf.py  CMakeLists.txt
md++/md++/: CMakeLists.txt  exported.txt
md++/md++/export_src/: export_html_manager.cpp  export_mdxx_manager.cpp  export_plugin_loader.cpp  main.cpp  mdxx_manager.cpp  metadata.cpp  plugin_loader.cpp  raw_html.cpp  variable_map.cpp
md++/md++/includes/: callable.h  compilation_info.h  content_manager.h  context.h  default.h  dll_info.h  expansion.h  html_lists.h  html_manager.h  line_data.h  mdxx_manager.h  metadata.h  plugin_loader.h  process_html.h  raw_html.h  run_program.h  template_context.h  template_manager.h  variable_map.h  variable_map_definition.h
md++/md++/program_src/: main.cpp
md++/md++/src/: content_manager.cpp  context.cpp  default.cpp  expansion.cpp  export_html_manager.cpp  export_plugin_loader.cpp  html_lists.cpp  html_manager.cpp  main.cpp  mdxx_manager.cpp  metadata.cpp  plugin_loader.cpp  process_html.cpp  raw_html.cpp  split.cpp  template_context.cpp  template_manager.cpp  variable_map.cpp
md++/mdxx/: CMakeLists.txt
md++/mdxx/includes/: c_string_copy.h  clear_line.h  compilation_info.h  content_manager.h  context.h  curly_braces_sub.h  default.h  dll_info.h  expansion.h  filesys_wrapper.h  gen_html.h  html_lists.h  html_manager.h  html_utils.h  join.h  line_data.h  list_vars_in_order.h  mdxx_ansi.h  mdxx_get.h  mdxx_manager.h  mdxx_token.h  metadata.h  plugin_loader.h  process_html.h  py_init.h  raw_html.h  run_program.h  sanitize_user_input.h  split.h  str_view_to_int.h  tag_handler.h  template_context.h  template_manager.h  thread_safe_print.h  variable_map.h  variable_map_definition.h  variable_parser.h
md++/mdxx/program_src/: main.cpp
md++/mdxx/src/: ansi.cpp  content_manager.cpp  curly_braces_sub.cpp  default.cpp  expansion.cpp  export_html_manager.cpp  export_mdxx_manager.cpp  export_plugin_loader.cpp  gen_html.cpp  html_lists.cpp  html_manager.cpp  html_utils.cpp  main.cpp  mdxx_get.cpp  mdxx_manager.cpp  metadata.cpp  plugin_loader.cpp  process_html.cpp  py_init.cpp  raw_html.cpp  template_context.cpp  template_manager.cpp  thread_safe_print.cpp  var_id.cpp  variable_map.cpp  variable_parser.cpp
md++/mdxx/tests/: variable_parsing_test.cpp
md++/mdxx/util/: c_string_copy.cpp  join.cpp  list_vars_in_order.cpp  sanitize_user_input.cpp  split.cpp  str_view_to_int.cpp  tag_handler.cpp
md++/plugins/: CMakeLists.txt
md++/plugins/code-block/: CMakeLists.txt  code-block.cpp  code_block.py
md++/plugins/terminal/: CMakeLists.txt  terminal.cpp
md++/plugins/tuacm/: CMakeLists.txt  tuacm.cpp
md++/sample/content/: .gitignore  no-terminal.json  no-terminal.mdxx
md++/sample/content/autosubs/: autosubs.html  autosubs.mdxx
md++/sample/content/code-block/: code-block-comparator-test.html  code-block.html  code-block.json  code-block.mdxx
md++/sample/content/content/: content.html  content.mdxx
md++/sample/content/div-and-span/: div-and-span.html  div-and-span.json  div-and-span.mdxx
md++/sample/content/no-terminal/: no-terminal-comparator-test.html  no-terminal.html  no-terminal.mdxx
md++/sample/content/redefine-base-variables/: redefine-base-variables.json  redefine-base-variables.mdxx
md++/sample/content/tuacm/: tuacm.html  tuacm.mdxx
md++/sample/content/tuacm-empty/: tuacm-empty.html  tuacm-empty.json  tuacm-empty.mdxx
md++/sample/content/urls/: urls.html  urls.json  urls.mdxx
md++/sample/content/xss/: xss.html  xss.json  xss.mdxx
md++/sample/templates/: actual-tuacm-article.mdxx  article.mdxx  tuacm-article.mdxx
md++/vendors/: CMakeLists.txt
md++/vendors/includes/: nlohmann  re2
md++/vendors/libs/: re2
mellor/: how_to_write_a_linux_command.md  path-examples.xcf  which-type-examples.xcf
mellor/linux_command/: article.css  aside.css  darkmode.css  general.css  how-to-write-a-linux-command.html  sidenav.js  terminal.css
tumd/: .gitignore  markdown.py  non_article.py  non_article_manager.py  tumd_manager.py
tumd/html/: article.py  default.py  index_page.py  lists.py  manager.py  paragraph.py  raw_html.py  redirect.py  style.py  tumd_comment.py
tumd/plugins/: aside.py  code-block.py  spoiler.py  terminal.py
tumd/snippets_html/: body_header.html  end_of_file.html  footer.html  generic.html
tumd/template/: context.py  manager.py
tumd/templates/: article-box.tumd  article.tumd  author-description.tumd  index-page.tumd  list.py  redirection.tumd
tumd/tests/: date.txt  how-to-make-a-command-on-linux-or-mac.tumd  how-to-write-a-linux-command.tumd  index-page.tumd  meta-description.txt  stat.py  test.tumd
tumd/util/: author.py  check_valid_context.py  date.py  meta_description.py  tags.py
